# product-builder-jhr

./: .gitignore  app.py  environment.lock.yml  environment.yml.bkp  pyproject.toml  readme.md  root_logger.py  setup.py
.devcontainer/: devcontainer.json
resources/cleaned/: addizionali_regionali.csv  elenco_comuni.csv
src/config/: config.py  inps_data.yaml
src/helpers/: utils.py
src/pages/: main_page.py
src/product_builder_jhr/: logger.py  main.py
src/product_builder_jhr/config/: config.py  inps_data.yaml
src/product_builder_jhr/data/raw/: Add_comunale_irpef2025.csv
src/product_builder_jhr/helpers/: brackets.py
src/product_builder_jhr/models/: inps_model.py
src/product_builder_jhr/pages/: main_page.py
src/product_builder_jhr/scripts/: setup.py
src/product_builder_jhr/services/: tax.py
src/project_builder_jhr/: logger.py  main.py
src/project_builder_jhr/config/: config.py  inps_data.yaml
src/project_builder_jhr/helpers/: brackets.py  parsers.py  utils.py
src/project_builder_jhr/models/: inps_model.py  tax.py
src/project_builder_jhr/pages/: main_page.py
src/project_builder_jhr/scripts/: setup.py
src/project_builder_jhr/services/: tax.py
src/services/: tax copy.py  tax.py
tests/: test_calculate_net_from_ral.py  test_cuneo_fiscale.py  test_detrazioni.py
